fix: mobile nav menu alignment

--- a/app/_styles/ui/navbar.module.css
+++ b/app/_styles/ui/navbar.module.css
@@ -123,8 +123,7 @@
     position: fixed;
     width: calc(100% + 4px);
     bottom: 0;
-    left: -2;
-    right: -2;
+    left: -2px;
     flex-direction: column;
     align-items: start;
     gap: 36px;
